# Vectrix

./: .clang-format  CMakeLists.txt  README.md
include/vectrix/: vectrix.h
include/vectrix/core/: base_matrix.h  base_vector.h  matrix1x1.h  matrix2x2.h  matrix3x3.h  matrix4x4.h  quaternion.h  vector2.h  vector3.h  vector4.h  vectrix_core.h
include/vectrix/math/: common.h  functions.h  random.h  solvers.h  typedef.h
src/: main.cpp
tests/: tests_common.h
tests/core/: test_matrix.cpp  test_matrix3x3.cpp  test_matrix4x4.cpp  test_vector.cpp  test_vector2.cpp  test_vector3.cpp
